app/assets/stylesheets/new_header.scss
// Target mobile version
.fr-header__menu.fr-modal {
  // Avoid overflow due to button width
  overflow-x: hidden;

  .fr-btn {
    width: auto;
  }

  // Align links & buttons
  .fr-translate {
    margin-left: 0;
    margin-right: 0;
  }

  // Align list content with other items
  .fr-menu__list {
    margin-left: 0.5rem;
  }

  // Add space between button edge and content
  .fr-container
    .fr-header__menu-links
    .fr-btns-group.flex.align-center
    .fr-translate.fr-nav
    .fr-nav__item
    .fr-translate__btn.fr-btn {
    margin-right: 0;
    margin-left: 0;
    padding-right: 0.5rem;
    padding-left: 0.5rem;
  }

  // Remove border on when there is one item only
  .fr-nav__item:only-child::before {
    box-shadow: none;
  }
}

